cmake_minimum_required(VERSION 3.15)

project(RocketEstimation
    VERSION 0.0.1
    DESCRIPTION "Do simulation for a model rocket."
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(SOURCE_FILES
  src/Main.cpp
)

add_executable(main
  ${SOURCE_FILES}
)

target_include_directories(main PRIVATE include)